--- a/client/app.json
+++ b/client/app.json
@@ -28,11 +28,13 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
-      
+      "expo-font"
+  
     ],
     "experiments": {
       "typedRoutes": true
     }
+
+
   }
 }
