--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
@@ -38,10 +39,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.3.2",
-    "toastify-react-native": "^5.0.0",
-    "expo-image-picker": "~15.0.7"
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
